--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "hydro-analysis"
-version = "0.0.3"
+version = "0.1.0"
 edition = "2024"
 authors = ["Matt Wilkins (https://github.com/mrmattwilkins)"]
 license = "MIT"
@@ -18,3 +18,7 @@ opt-level = 3
 [dependencies]
 rayon = "1.10"
 ndarray = { version = "0.15.6", features = ["rayon"] }
+thiserror = "2.0.0"
+tiff = "0.9"
+bytemuck = "1.22.0"
+num = "0.4"
