--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "hydro-analysis"
-version = "0.1.2"
+version = "0.1.3"
 edition = "2024"
 authors = ["Matt Wilkins (https://github.com/mrmattwilkins)"]
 license = "MIT"
@@ -18,6 +18,8 @@ opt-level = 3
 [dependencies]
 rayon = "1.10"
 ndarray = { version = "0.16.1", features = ["rayon"] }
+anyhow = "1.0.1"
+tempfile = "3.25.0"
 thiserror = "2.0.0"
 tiff = "0.9"
 bytemuck = "1.22.0"
